Fixed Header alignment

--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -1,26 +1,25 @@
 #navbar{
     display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
+    flex-flow: row wrap;
+    justify-content: flex-end;
+    align-items: center;
     background-color: white;
     width: 100%;
-    box-shadow: 2px 2px 2px #6f6f70a6;
-    align-content: center;
-    justify-content: space-around;
     height: 125px;
+    padding-right: 50px;
+    padding-left: 50px;
     position: fixed;
+    box-shadow: 2px 2px 2px rgba(111, 111, 112, 0.65);
 }
 
 #logo{
-    width: 250px;
-    height: 100px;
+    margin-right: auto;
 }
 
 #options{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    padding-top: 48px;
 }
 
 #comoFunciona{
